# Spectrum

./: .gitignore  CMakeLists.txt  README.md  Settings.h  Spectrum.cpp  Spectrum.h  System.cpp  System.h  main.cpp  plot.py  select.cpp  system.ini
